--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,17 +31,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Dependencies
+      - name: Install dependencies
         run: yarn install
-      - name: Build Site
+      - name: Build site
         run: yarn build
-      - name: Setup Pages
+      - name: Setup pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: '/build'
+          path: './build'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
